Agregué nuevas funciones y estilos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <button onclick="mostrarFormulario('gasto')" class="bg-red-600 hover:bg-red-700 text-white py-4 rounded-xl text-lg font-semibold">Gastos</button>
       <button onclick="mostrarFormulario('consulta')" class="bg-gray-700 hover:bg-gray-800 text-white py-4 rounded-xl text-lg font-semibold">Consultas</button>
       <button onclick="mostrarFormulario('ganancia')" class="bg-yellow-500 hover:bg-yellow-600 text-white py-4 rounded-xl text-lg font-semibold">Ganancias</button>
+      <button onclick="mostrarFormulario('balance')" class="bg-purple-600 hover:bg-purple-700 text-white py-4 rounded-xl text-lg font-semibold">
+      Balance General
+      </button>
+
 
     </div>
 
