--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </label>
             <label>
               Tasa de cambio (USD a ARS):
-              <input type="number" min="0" step="0.01" class="border p-2 rounded w-full" id="tasa-cambio" value="350" required>
+              <input type="number" min="0" step="0.01" class="border p-2 rounded w-full" id="tasa-cambio" value="1245" required>
             </label>
             <button type="submit" class="bg-purple-600 hover:bg-purple-700 text-white py-2 rounded">Calcular Balance</button>
           </form>
@@ -390,7 +390,7 @@ function verGananciasMensuales() {
         if (snapshotGastos.exists()) {
           snapshotGastos.forEach(child => {
             const g = child.val();
-            gastosMes += parseDecimal(g.montoPesos) + parseDecimal(g.montoUSD) * 350; // Ejemplo: convertir USD a pesos (ajustar tasa)
+            gastosMes += parseDecimal(g.montoPesos) + parseDecimal(g.montoUSD) * tasaCambio; // Ejemplo: convertir USD a pesos (ajustar tasa)
           });
         }
 
@@ -452,6 +452,12 @@ function editarItem(tipo, id) {
 
 
 function calcularBalanceSeparado(capitalPesos, capitalDolares, tasaCambio) {
+  // Guardar capital inicial actualizado en Firebase
+  db.ref("capitalInicial").set({
+    pesos: capitalPesos,
+    dolares: capitalDolares
+  });
+
   let ventasPesos = 0;
   let ventasDolares = 0;
   let gastosPesos = 0;
@@ -513,7 +519,7 @@ function calcularBalanceSeparado(capitalPesos, capitalDolares, tasaCambio) {
             <li><strong>DÓLARES:</strong> $${capitalNetoDolares.toFixed(2)} USD</li>
             <li><strong>Total aproximado en pesos:</strong> $${totalEnPesos.toFixed(2)} ARS (usando tasa $${tasaCambio})</li>
           </ul>
-          <p>(Capital inicial + Ventas - Gastos - Costo de Mercadería)</p>
+          <p class="mt-2 text-sm italic text-gray-600">(Capital inicial + Ventas - Gastos - Costo de Mercadería)</p>
         `;
 
         document.getElementById('resultado-balance').innerHTML = resultado;
