--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
 
         `;
 
+        let precioBaseARS = 0;
+        let precioBaseUSD = 0;
+
         setTimeout(() => {
           const imeiInput = document.getElementById('imei-buscar');
           const bonificacionInput = document.getElementById('bonificacion');
