Agregué nuevas funciones y estilos

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
             </select>
           </label>
 
+          <label>Moneda:
+            <select id="moneda" class="border p-2 rounded w-full">
+              <option value="ARS">Pesos</option>
+              <option value="USD">Dólares</option>
+            </select>
+          </label>
+
           <label>
             Tasa de cambio (USD a ARS):
             <input type="number" min="0" step="0.01" id="tasa-cambio-venta" value="1245" class="border p-2 rounded w-full" />
